--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,11 +1,15 @@
 .logo-brand h1 {
-  margin-top: -40px;
-  margin-left: 40px;
+  /* margin-top: -40px;
+  margin-left: 40px; */
   color: rgba(219, 48, 34, 1);
   font-weight: 1000;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 24px;
   text-decoration: none;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-left: 5px
 }
 
 #search {
