--- a/src/components/Modal/ModalAddress/modal.module.css
+++ b/src/components/Modal/ModalAddress/modal.module.css
@@ -76,6 +76,18 @@
   padding: 1px 7px 1px 7px;
   font-size: 16px;
 }
+.inputReadonly {
+  flex: 1;
+  height: 100px;
+  /* height: calc((48 / 900) * 900vh); */
+  border: 1px solid #d9d9d9;
+  color: black;
+  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  padding: 1px 7px 1px 7px;
+  font-size: 16px;
+  background-color: #d9d9d9;
+}
 .label {
   font-family: "Metropolis";
   font-weight: 500;
